# exercise

./: .gitignore
cpp/: Makefile_base
cpp/bTree/: .gitignore  Makefile  main.cpp
cpp/bTree/include/: bTree.hxx
cpp/complex/: Makefile
cpp/complex/include/: complex.hxx
cpp/curses/: .gitignore  CMakeLists.txt  ncurses_test.cxx
cpp/img2ascii/: .gitignore  Makefile  main.cpp
cpp/img2ascii/include/: img2ascii.hxx
cpp/img2ascii/src/: img2ascii.cpp
cpp/img2ascii_v2/: Makefile  edges.txt  main.cpp
cpp/img2ascii_v2/include/: img2ascii.hxx
cpp/img2ascii_v2/src/: img2ascii.cpp
cpp/img2term/: CMakeLists.txt
cpp/img2term/include/img2term/: img2term.hxx  options_from_parse.hxx  term_colors.hxx
cpp/img2term/src/: img2term.cxx
cpp/img2term/src/lib/: img2term.cxx  options_from_parse.cxx
cpp/libpng/: .gitignore  Makefile  main.cpp
cpp/libpng/include/: PNGImage.hxx
cpp/libpng/src/: PNGImage.cpp
cpp/mandelbrot/: CMakeLists.txt  Makefile  main.cpp  main.cxx
cpp/mandelbrot/include/: complex.hxx  mandelbrot.hxx
cpp/mandelbrot/python/: CMakeLists.txt  pybrot.cxx  pycomplex.cxx
cpp/mandelbrot/src/: complex.cpp  mandelbrot.cpp
cpp/mrfImageDenoise/: .gitignore  CMakeLists.txt  main.cpp  main.cxx
cpp/mrfImageDenoise/include/: MrfImageDenoise.hxx
cpp/mrfImageDenoise/src/: CMakeLists.txt  MrfImageDenoise.cxx
cpp/overflow_exploit/: main.cxx  overflow
cpp/parser/: .gitignore  Makefile  main.cpp
cpp/parser/include/: parser.hxx
cpp/parser/src/: parser.cpp
cpp/qt4/: .gitignore  main.cpp
cpp/slic/: CMakeLists.txt  FunctionTest  main.cxx
cpp/slic/include/: slic.hxx
cpp/svm/: .gitignore  test.cpp
cpp/svm/include/: svm.hpp
cpp/vigra/: .gitignore  CMakeLists.txt  main.cpp
kata/02/: main.py
kata/06/: main.py  test.txt
project_euler/: .gitignore
project_euler/18/: main.cpp
project_euler/19/: 19.py  main.cpp
project_euler/21/: main.cpp
project_euler/22/: 22.py
project_euler/23/: main.cpp
project_euler/24/: main.cpp
project_euler/26/: 26.hpp  main.cpp
project_euler/27/: 27.hpp  main.cpp
project_euler/32/: 32.hpp  main.cpp
project_euler/33/: main.cpp
project_euler/40/: 40.hpp  main.cpp
project_euler/48/: 48.hpp  main.cpp
project_euler/49/: 49.hpp  main.cpp
project_euler/81/: 81.hpp  CMakeLists.txt  main.cpp  test.txt
python/movement_magnification/: magnifyMotion.py
python/pi/: mc_pi.py
