CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(img2term)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_extensions/)
FIND_PACKAGE(VIGRA REQUIRED)
if (VIGRA_FOUND)
    MESSAGE("--   > vigra found!")
    INCLUDE_DIRECTORIES(${VIGRA_INCLUDE_DIR})
    LINK_DIRECTORIES( ${VIGRA_IMPEX_LIBRARY_DIR})
endif()



SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Wfatal-errors -std=c++0x -pedantic -pthread")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Werror")	



INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include/")

FILE(GLOB LIB_CXX "src/lib/*.cxx")
ADD_LIBRARY(img2term SHARED ${LIB_CXX})
ADD_EXECUTABLE(img2term_app src/bin/img2term_app.cxx)

TARGET_LINK_LIBRARIES(img2term boost_program_options)
TARGET_LINK_LIBRARIES(img2term_app img2term vigraimpex)

INSTALL(TARGETS img2term LIBRARY DESTINATION lib)
INSTALL(TARGETS img2term_app RUNTIME DESTINATION bin)
