cmake_minimum_required(VERSION 2.8)
project (slic)
include_directories("${PROJECT_SOURCE_DIR}/include")
add_executable(FunctionTest main.cxx)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++0x")
set(CMAKE_CXX_FLAGS_RELEASE -O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG -g")
target_link_libraries(FunctionTest vigraimpex)
# set(CMAKE_BUILD_TYPE "RELEASE")
message(${CMAKE_CXX_FLAGS})
